--- a/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
@@ -215,6 +215,8 @@ $drawer-transition-time: 0.5s
         display: block
         z-index: 12
         padding: 0
+        overflow: auto
+        scrollbar-width: none
         .ff-globaltoc
             position: unset
         h1
